--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@babel/preset-typescript": "^7.12.7",
     "@kintone/dts-gen": "^3.1.1",
     "@kintone/plugin-packer": "^1.0.8",
+    "@kintone/rest-api-client": "^1.8.2",
     "@kintone/webpack-plugin-kintone-plugin": "^1.0.12",
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
