--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "author": "ribbit",
   "license": "MIT",
   "scripts": {
-    "build": "webpack",
-    "produce": "webpack --mode production",
+    "develop": "webpack --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js",
     "watch": "webpack -w",
     "init": "kintone-plugin-packer plugin"
   },
@@ -26,10 +26,12 @@
     "babel-loader": "^8.2.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "terser-webpack-plugin": "^5.1.1",
     "ts-loader": "^8.0.4",
     "typescript": "^4.0.3",
-    "webpack": "^5.0.0",
-    "webpack-cli": "^4.0.0"
+    "webpack": "^5.23.0",
+    "webpack-cli": "^4.5.0",
+    "webpack-merge": "^5.7.3"
   },
   "private": true
 }
