--- a/package.json
+++ b/package.json
@@ -7,31 +7,36 @@
     "develop": "webpack --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
     "watch": "webpack -w",
-    "init": "kintone-plugin-packer plugin"
+    "init": "kintone-plugin-packer plugin",
+    "check-updates": "ncu",
+    "update-modules": "ncu -u"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
-    "@babel/plugin-transform-runtime": "^7.12.10",
-    "@babel/preset-env": "^7.12.10",
-    "@babel/preset-react": "^7.12.10",
-    "@babel/preset-typescript": "^7.12.7",
-    "@kintone/dts-gen": "^3.1.1",
-    "@kintone/plugin-packer": "^1.0.8",
-    "@kintone/rest-api-client": "^1.8.2",
-    "@kintone/webpack-plugin-kintone-plugin": "^1.0.12",
-    "@material-ui/core": "^4.11.2",
+    "@babel/core": "^7.15.5",
+    "@babel/plugin-transform-runtime": "^7.15.0",
+    "@babel/preset-env": "^7.15.6",
+    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.15.0",
+    "@emotion/styled": "^11.3.0",
+    "@kintone/dts-gen": "^5.0.3",
+    "@kintone/plugin-packer": "^5.0.17",
+    "@kintone/rest-api-client": "^2.0.19",
+    "@kintone/webpack-plugin-kintone-plugin": "^5.0.17",
+    "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@types/react": "^17.0.21",
+    "@types/react-dom": "^17.0.9",
     "babel-loader": "^8.2.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "terser-webpack-plugin": "^5.1.1",
-    "ts-loader": "^8.0.4",
-    "typescript": "^4.0.3",
-    "webpack": "^5.23.0",
-    "webpack-cli": "^4.5.0",
-    "webpack-merge": "^5.7.3"
+    "immer": "^9.0.6",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "terser-webpack-plugin": "^5.2.4",
+    "ts-loader": "^9.2.5",
+    "ts-node": "^10.2.1",
+    "typescript": "^4.4.3",
+    "webpack": "^5.52.1",
+    "webpack-cli": "^4.8.0",
+    "webpack-merge": "^5.8.0"
   },
   "private": true
 }
