--- a/plugin/manifest.json
+++ b/plugin/manifest.json
@@ -14,15 +14,19 @@
   "homepage_url": {
     "ja": "https://localbias.work/",
     "en": "https://localbias.work/"
-   },
+  },
   "desktop": {
-    "js": ["js/desktop.js"],
-    "css": ["https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;500;700&family=Roboto:wght@300;400;500;700&display=swap"]
+    "js": ["js/desktop.js", "https://cdn.jsdelivr.net/gh/local-bias/kintone-cdn/dist/desktop.js"],
+    "css": []
+  },
+  "mobile": {
+    "js": ["js/desktop.js", "https://cdn.jsdelivr.net/gh/local-bias/kintone-cdn/dist/desktop.js"],
+    "css": []
   },
   "config": {
     "html": "html/config.html",
-    "js": ["js/config.js"],
-    "css": ["https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;500;700&family=Roboto:wght@300;400;500;700&display=swap"],
+    "js": ["js/config.js", "https://cdn.jsdelivr.net/gh/local-bias/kintone-cdn/dist/config.js"],
+    "css": [],
 
     "required_params": []
   }
