--- a/package.json
+++ b/package.json
@@ -6,20 +6,20 @@
   "scripts": {
     "develop": "webpack --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
-    "watch": "webpack -w",
-    "init": "kintone-plugin-packer plugin",
+    "watch": "webpack --config webpack.dev.js -w",
+    "init": "run-s create-ppk move-ppk",
+    "start": "run-p watch upload",
+    "upload": "kintone-plugin-uploader dist/plugin-dev.zip --watch --waiting-dialog-ms 3000",
+    "update-modules": "ncu -u",
     "check-updates": "ncu",
-    "update-modules": "ncu -u"
+    "create-ppk": "kintone-plugin-packer --out dist/plugin-dev.zip plugin",
+    "move-ppk": "node scripts/move-ppk.ts"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.5",
-    "@babel/plugin-transform-runtime": "^7.15.0",
-    "@babel/preset-env": "^7.15.6",
-    "@babel/preset-react": "^7.14.5",
-    "@babel/preset-typescript": "^7.15.0",
     "@emotion/styled": "^11.3.0",
     "@kintone/dts-gen": "^5.0.3",
     "@kintone/plugin-packer": "^5.0.17",
+    "@kintone/plugin-uploader": "^6.0.2",
     "@kintone/rest-api-client": "^2.0.19",
     "@kintone/webpack-plugin-kintone-plugin": "^5.0.17",
     "@material-ui/core": "^4.12.3",
@@ -28,12 +28,14 @@
     "@types/react-dom": "^17.0.9",
     "babel-loader": "^8.2.2",
     "immer": "^9.0.6",
+    "npm-run-all": "^4.1.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "terser-webpack-plugin": "^5.2.4",
     "ts-loader": "^9.2.5",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3",
+    "utility-types": "^3.10.0",
     "webpack": "^5.52.1",
     "webpack-cli": "^4.8.0",
     "webpack-merge": "^5.8.0"
