--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kintone-plugin-age",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "author": "ribbit",
   "license": "MIT",
   "scripts": {
@@ -28,9 +28,12 @@
     "@types/react-dom": "^17.0.9",
     "babel-loader": "^8.2.2",
     "immer": "^9.0.6",
+    "notistack": "^1.0.10",
     "npm-run-all": "^4.1.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-error-boundary": "^3.1.3",
+    "recoil": "^0.4.1",
     "terser-webpack-plugin": "^5.2.4",
     "ts-loader": "^9.2.5",
     "ts-node": "^10.2.1",
@@ -39,6 +42,5 @@
     "webpack": "^5.52.1",
     "webpack-cli": "^4.8.0",
     "webpack-merge": "^5.8.0"
-  },
-  "private": true
+  }
 }
