--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,28 +3,21 @@
     "sourceMap": true,
     "target": "ESNext",
     "module": "ESNext",
-    "lib": [
-      "esnext",
-      "dom"
-    ],
+    "lib": ["esnext", "dom"],
     "outDir": "dist",
     "allowJs": true,
     "esModuleInterop": true,
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
+    "resolveJsonModule": true,
     "jsx": "react",
-    "strict": true
+    "strict": true,
+    "paths": {
+      "@common/*": ["./src/common/*"]
+    }
   },
-  "files": [
-    "./node_modules/@kintone/dts-gen/kintone.d.ts",
-    "./src/types/index.ts",
-  ],
-  "include": [
-    "src/**/*.ts",
-    "src/**/*.tsx"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist"
-  ]
+  "typeRoots": ["src/types", "node_modules/@types"],
+  "files": ["./node_modules/@kintone/dts-gen/kintone.d.ts"],
+  "include": ["src/**/*.ts", "src/**/*.tsx"],
+  "exclude": ["node_modules", "dist"]
 }
