--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kintone-plugin-age",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "author": "ribbit",
   "license": "MIT",
   "scripts": {
@@ -20,14 +20,15 @@
     "lint": "eslint ./src --cache --ext .js,.ts,.tsx"
   },
   "devDependencies": {
-    "@emotion/styled": "11.10.5",
-    "@kintone/dts-gen": "6.1.18",
-    "@kintone/plugin-packer": "6.0.22",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@kintone/dts-gen": "6.1.19",
+    "@kintone/plugin-packer": "6.0.23",
     "@kintone/plugin-uploader": "7.1.8",
-    "@kintone/rest-api-client": "3.3.0",
-    "@kintone/webpack-plugin-kintone-plugin": "6.0.22",
-    "@material-ui/core": "4.12.4",
-    "@material-ui/icons": "4.11.3",
+    "@kintone/rest-api-client": "3.3.1",
+    "@kintone/webpack-plugin-kintone-plugin": "6.0.23",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.7",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "babel-loader": "9.1.2",
@@ -41,7 +42,7 @@
     "terser-webpack-plugin": "5.3.6",
     "ts-loader": "9.4.2",
     "ts-node": "10.9.1",
-    "typescript": "4.9.4",
+    "typescript": "4.9.5",
     "utility-types": "3.10.0",
     "webpack": "5.75.0",
     "webpack-cli": "5.0.1",
