✨ 他のプラグインに合わせて環境を最新化

--- a/package.json
+++ b/package.json
@@ -4,20 +4,16 @@
   "author": "ribbit",
   "license": "MIT",
   "scripts": {
-    "create-ppk": "kintone-plugin-packer --out dist/plugin-dev.zip plugin",
-    "move-ppk": "ts-node scripts/move-ppk.ts",
-    "init": "run-s create-ppk move-ppk",
-    "bundle:dev": "webpack --config webpack.dev.js",
-    "bundle:prod": "webpack --config webpack.prod.js",
-    "bundle:watch": "webpack --config webpack.dev.js -w",
-    "merge-manifest:dev": "ts-node scripts/marge-json.ts dev",
-    "merge-manifest:prod": "ts-node scripts/marge-json.ts prod",
-    "develop": "run-s merge-manifest:dev bundle:dev",
-    "build": "run-s  merge-manifest:prod bundle:prod",
-    "watch": "run-s merge-manifest:dev bundle:watch",
-    "upload": "kintone-plugin-uploader dist/plugin-dev.zip --watch --waiting-dialog-ms 3000",
-    "start": "run-p watch upload",
+    "init": "node scripts/marge-json.mjs dev && kintone-plugin-packer --out dist/plugin-dev.zip plugin && node scripts/rename-ppk.mjs",
+    "build": "node scripts/marge-json.mjs prod && kbuild prod plugin --prod-root cdn && kintone-plugin-packer --out dist/plugin.zip --ppk dist/private.ppk plugin",
+    "standalone": "node scripts/marge-json.mjs standalone && kbuild prod plugin --prod-root plugin && kintone-plugin-packer --out dist/plugin-standalone.zip --ppk dist/private.ppk plugin",
+    "dev": "node scripts/marge-json.mjs dev && kintone-plugin-packer --out dist/plugin-dev.zip --ppk dist/private.ppk plugin && concurrently \"yarn:dev:*\"",
+    "dev:build": "kbuild dev plugin",
+    "dev:upload": "node scripts/upload.mjs",
     "lint": "eslint ./src --cache --ext .js,.ts,.tsx"
+  },
+  "browser": {
+    "path": false
   },
   "devDependencies": {
     "@emotion/react": "^11.11.0",
@@ -26,26 +22,24 @@
     "@kintone/plugin-packer": "6.0.38",
     "@kintone/plugin-uploader": "7.1.10",
     "@kintone/rest-api-client": "3.3.14",
-    "@kintone/webpack-plugin-kintone-plugin": "6.0.38",
+    "@konomi-app/kbuild": "^1.5.1",
+    "@konomi-app/kintone-utilities": "^2.6.0",
+    "@konomi-app/kintone-utility-component": "^0.9.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.3",
+    "@sentry/react": "^7.53.1",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
-    "babel-loader": "9.1.2",
+    "concurrently": "^8.0.1",
+    "dotenv": "^16.1.1",
     "immer": "10.0.2",
     "notistack": "3.0.1",
-    "npm-run-all": "4.1.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-error-boundary": "4.0.9",
     "recoil": "0.7.7",
     "terser-webpack-plugin": "5.3.9",
-    "ts-loader": "9.4.3",
-    "ts-node": "10.9.1",
     "typescript": "5.0.4",
-    "utility-types": "3.10.0",
-    "webpack": "5.84.1",
-    "webpack-cli": "5.1.1",
-    "webpack-merge": "5.9.0"
+    "utility-types": "3.10.0"
   }
 }
