--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@konomi-app/kbuild": "^1.5.1",
     "@konomi-app/kintone-utilities": "^2.6.0",
     "@konomi-app/kintone-utility-component": "^0.9.0",
+    "@konomi-app/ui-react": "^1.1.1",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.3",
     "@sentry/react": "^7.53.1",
