--- a/package.json
+++ b/package.json
@@ -4,43 +4,50 @@
   "author": "ribbit",
   "license": "MIT",
   "scripts": {
-    "init": "node scripts/marge-json.mjs dev && kintone-plugin-packer --out dist/plugin-dev.zip plugin && node scripts/rename-ppk.mjs",
-    "build": "node scripts/marge-json.mjs prod && kbuild prod plugin --prod-root cdn && kintone-plugin-packer --out dist/plugin.zip --ppk dist/private.ppk plugin",
-    "standalone": "node scripts/marge-json.mjs standalone && kbuild prod plugin --prod-root plugin && kintone-plugin-packer --out dist/plugin-standalone.zip --ppk dist/private.ppk plugin",
-    "dev": "node scripts/marge-json.mjs dev && kintone-plugin-packer --out dist/plugin-dev.zip --ppk dist/private.ppk plugin && concurrently \"yarn:dev:*\"",
-    "dev:build": "kbuild dev plugin",
+    "init": "node scripts/marge-json.mjs dev && npm run build:html && kintone-plugin-packer --out dist/plugin-dev.zip plugin && node scripts/rename-ppk.mjs",
+    "build": "node scripts/marge-json.mjs prod && concurrently \"npm:build:*\" && kintone-plugin-packer --out dist/plugin.zip --ppk dist/private.ppk plugin",
+    "build:html": "html-minifier --minify-css true --collapse-whitespace --remove-comments --remove-optional-tags --remove-redundant-attributes --remove-script-type-attributes --remove-tag-whitespace --use-short-doctype src/config/config.html -o plugin/config.html",
+    "build:js": "kbuild prod plugin --prod-root plugin",
+    "build:css": "tailwindcss -i ./src/styles/global.css -o ./plugin/config.css -c ./tailwind.config.config.mjs --minify && tailwindcss -i ./src/styles/global.css -o ./plugin/desktop.css -c ./tailwind.config.desktop.mjs --minify",
+    "standalone": "node scripts/marge-json.mjs standalone && concurrently \"npm:build:*\" && kintone-plugin-packer --out dist/plugin-standalone.zip --ppk dist/private.ppk plugin",
+    "dev": "node scripts/marge-json.mjs dev && kintone-plugin-packer --out dist/plugin-dev.zip --ppk dist/private.ppk plugin && concurrently \"npm:dev:*\"",
+    "dev:js": "kbuild dev plugin",
+    "dev:css-config": "tailwindcss -i ./src/styles/global.css -o ./dist/dev/config.css -c ./tailwind.config.config.mjs -w",
+    "dev:css-desktop": "tailwindcss -i ./src/styles/global.css -o ./dist/dev/desktop.css -c ./tailwind.config.desktop.mjs -w",
     "dev:upload": "node scripts/upload.mjs",
     "lint": "eslint ./src --cache --ext .js,.ts,.tsx"
   },
   "browser": {
     "path": false
   },
-  "devDependencies": {
-    "@emotion/react": "^11.11.1",
+  "dependencies": {
+    "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
-    "@kintone/dts-gen": "8.0.3",
-    "@kintone/plugin-packer": "8.0.3",
-    "@kintone/plugin-uploader": "9.0.2",
     "@kintone/rest-api-client": "5.0.5",
-    "@konomi-app/kbuild": "^3.0.0",
-    "@konomi-app/kintone-utilities": "^4.0.0",
-    "@konomi-app/kintone-utility-component": "^1.2.0",
+    "@konomi-app/kintone-utilities": "^4.1.6",
+    "@konomi-app/kintone-utility-component": "^1.3.1",
     "@konomi-app/ui-react": "^1.1.1",
-    "@mui/icons-material": "^5.14.6",
-    "@mui/material": "^5.14.6",
-    "@sentry/react": "^7.64.0",
-    "@types/react": "18.2.46",
-    "@types/react-dom": "18.2.18",
-    "concurrently": "^8.2.1",
-    "dotenv": "^16.3.1",
+    "@mui/icons-material": "^5.15.3",
+    "@mui/material": "^5.15.3",
+    "@sentry/react": "^7.92.0",
     "immer": "10.0.3",
     "notistack": "3.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-error-boundary": "4.0.12",
-    "recoil": "0.7.7",
-    "terser-webpack-plugin": "5.3.10",
-    "typescript": "5.3.3",
-    "utility-types": "3.10.0"
+    "recoil": "0.7.7"
+  },
+  "devDependencies": {
+    "@kintone/dts-gen": "8.0.3",
+    "@kintone/plugin-packer": "8.0.3",
+    "@kintone/plugin-uploader": "9.0.2",
+    "@konomi-app/kbuild": "^3.1.2",
+    "@types/react": "18.2.46",
+    "@types/react-dom": "18.2.18",
+    "concurrently": "^8.2.2",
+    "dotenv": "^16.3.1",
+    "html-minifier": "^4.0.0",
+    "tailwindcss": "^3.4.0",
+    "typescript": "5.3.3"
   }
 }
