--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
     "@emotion/styled": "^11.11.0",
     "@kintone/rest-api-client": "5.0.5",
     "@konomi-app/kintone-utilities": "^4.1.6",
-    "@konomi-app/kintone-utility-component": "^1.3.1",
+    "@konomi-app/kintone-utilities-react": "^1.11.0",
     "@konomi-app/ui-react": "^1.1.1",
+    "@lb-ribbit/kintone-xapp": "^0.4.0",
     "@mui/icons-material": "^5.15.3",
     "@mui/material": "^5.15.3",
     "@sentry/react": "^7.92.0",
