--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kintone-plugin-age",
-  "version": "2.1.2",
+  "version": "2.0.0",
   "author": "ribbit",
   "license": "MIT",
   "scripts": {
@@ -23,32 +23,56 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
-    "@kintone/rest-api-client": "5.0.5",
     "@konomi-app/kintone-utilities": "^4.1.6",
     "@konomi-app/kintone-utilities-react": "^1.11.0",
+    "@konomi-app/ui": "^2.2.4",
     "@konomi-app/ui-react": "^1.1.1",
-    "@lb-ribbit/kintone-xapp": "^0.4.0",
-    "@mui/icons-material": "^5.15.3",
-    "@mui/material": "^5.15.3",
-    "@sentry/react": "^7.92.0",
-    "immer": "10.0.3",
-    "notistack": "3.0.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-error-boundary": "4.0.12",
-    "recoil": "0.7.7"
+    "@lb-ribbit/kintone-secrets": "0.3.0",
+    "@lb-ribbit/kintone-xapp": "0.4.0",
+    "@mui/icons-material": "5.15.2",
+    "@mui/material": "5.15.2",
+    "immer": "^10.0.3",
+    "luxon": "^3.4.4",
+    "notistack": "^3.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.12",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@kintone/dts-gen": "8.0.3",
     "@kintone/plugin-packer": "8.0.3",
     "@kintone/plugin-uploader": "9.0.2",
-    "@konomi-app/kbuild": "^3.1.2",
+    "@konomi-app/kbuild": "^3.1.1",
+    "@types/luxon": "3.3.7",
     "@types/react": "18.2.46",
     "@types/react-dom": "18.2.18",
+    "@typescript-eslint/eslint-plugin": "^6.16.0",
+    "@typescript-eslint/parser": "6.16.0",
     "concurrently": "^8.2.2",
-    "dotenv": "^16.3.1",
+    "devcert": "^1.2.2",
+    "dotenv": "16.3.1",
+    "eslint": "^8.56.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.1.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-standard-with-typescript": "^43.0.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.6.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.33.2",
+    "express": "^4.18.2",
     "html-minifier": "^4.0.0",
     "tailwindcss": "^3.4.0",
-    "typescript": "5.3.3"
+    "typescript": "^5.3.3"
+  },
+  "prettier": {
+    "printWidth": 100,
+    "arrowParens": "always",
+    "singleQuote": true,
+    "jsxSingleQuote": true,
+    "tabWidth": 2,
+    "trailingComma": "es5",
+    "endOfLine": "lf"
   }
 }
