--- a/package.json
+++ b/package.json
@@ -4,18 +4,10 @@
   "author": "ribbit",
   "license": "MIT",
   "scripts": {
-    "init": "node scripts/marge-json.mjs dev && npm run build:html && kintone-plugin-packer --out dist/plugin-dev.zip plugin && node scripts/rename-ppk.mjs",
-    "build": "node scripts/marge-json.mjs prod && concurrently \"npm:build:*\" && kintone-plugin-packer --out dist/plugin.zip --ppk dist/private.ppk plugin",
-    "build:html": "html-minifier --minify-css true --collapse-whitespace --remove-comments --remove-optional-tags --remove-redundant-attributes --remove-script-type-attributes --remove-tag-whitespace --use-short-doctype src/config/config.html -o plugin/config.html",
-    "build:js": "kbuild prod plugin --prod-root plugin",
-    "build:css": "tailwindcss -i ./src/styles/global.css -o ./plugin/config.css -c ./tailwind.config.config.mjs --minify && tailwindcss -i ./src/styles/global.css -o ./plugin/desktop.css -c ./tailwind.config.desktop.mjs --minify",
-    "standalone": "node scripts/marge-json.mjs standalone && concurrently \"npm:build:*\" && kintone-plugin-packer --out dist/plugin-standalone.zip --ppk dist/private.ppk plugin",
-    "dev": "node scripts/marge-json.mjs dev && kintone-plugin-packer --out dist/plugin-dev.zip --ppk dist/private.ppk plugin && concurrently \"npm:dev:*\"",
-    "dev:js": "kbuild dev plugin",
-    "dev:css-config": "tailwindcss -i ./src/styles/global.css -o ./dist/dev/config.css -c ./tailwind.config.config.mjs -w",
-    "dev:css-desktop": "tailwindcss -i ./src/styles/global.css -o ./dist/dev/desktop.css -c ./tailwind.config.desktop.mjs -w",
-    "dev:upload": "node scripts/upload.mjs",
-    "lint": "eslint ./src --cache --ext .js,.ts,.tsx"
+    "init": "plugin init && plugin genkey",
+    "build": "plugin build && plugin zip",
+    "standalone": "plugin build && plugin zip --env standalone",
+    "dev": "plugin dev"
   },
   "browser": {
     "path": false
@@ -43,6 +35,7 @@
     "@kintone/dts-gen": "8.0.11",
     "@kintone/plugin-packer": "8.1.2",
     "@kintone/plugin-uploader": "9.1.1",
+    "@konomi-app/k2": "^0.9.0",
     "@konomi-app/kbuild": "^3.1.2",
     "@types/luxon": "3.4.2",
     "@types/react": "18.3.3",
