--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@mui/material": "6.1.1",
     "immer": "^10.1.1",
     "luxon": "^3.5.0",
+    "nanoid": "^5.0.7",
     "notistack": "^3.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
