📦 zodを追加し、依存関係を最新化

--- a/package.json
+++ b/package.json
@@ -13,32 +13,33 @@
     "path": false
   },
   "dependencies": {
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
-    "@konomi-app/kintone-utilities": "^5.11.0",
-    "@konomi-app/kintone-utilities-react": "^1.20.1",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@konomi-app/kintone-utilities": "^5.12.1",
+    "@konomi-app/kintone-utilities-react": "^1.22.5",
     "@konomi-app/ui": "^2.3.0",
     "@konomi-app/ui-react": "^1.1.1",
-    "@mui/icons-material": "6.1.5",
-    "@mui/material": "6.1.5",
+    "@mui/icons-material": "6.1.6",
+    "@mui/material": "6.1.6",
     "immer": "^10.1.1",
     "luxon": "^3.5.0",
-    "nanoid": "^5.0.7",
-    "notistack": "^3.0.1",
+    "nanoid": "^5.1.0",
+    "notistack": "^3.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-error-boundary": "^4.1.2",
-    "recoil": "^0.7.7"
+    "recoil": "^0.7.7",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@kintone/dts-gen": "8.0.13",
-    "@konomi-app/k2": "^1.7.6",
+    "@konomi-app/k2": "^1.8.1",
     "@types/luxon": "3.4.2",
     "@types/react": "18.3.12",
     "@types/react-dom": "18.3.1",
     "dotenv": "16.4.5",
-    "tailwindcss": "^3.4.14",
-    "typescript": "^5.6.3"
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.7.3"
   },
   "prettier": {
     "printWidth": 100,
